tempfile/derive_more/tests/compile_fail/debug/unknown_attribute.rs
#[derive(derive_more::Debug)]
#[debug(unknown = "unknown")]
pub struct Foo {
    bar: String,
}

fn main() {}
